[CORRECTION] Corrige certains éléments d’alignements dans le diagnostic

--- a/mon-aide-cyber-ui/src/assets/styles/_diagnostic.scss
+++ b/mon-aide-cyber-ui/src/assets/styles/_diagnostic.scss
@@ -25,8 +25,20 @@
   width: 18.157rem;
 }
 
-.diagnostic-main {
+.diagnostic {
   margin-top: 7.5rem;
+
+  @media screen and (max-width: 768px) {
+    .section {
+      margin: 2.5rem 0 0;
+    }
+  }
+
+  @media screen and (min-width: 769px) {
+    .section {
+      margin: 2.5rem 0 0;
+    }
+  }
 
   .info-bulle {
     margin: 2.5rem 0 0;
@@ -51,7 +63,7 @@
 }
 
 .piedpage-diagnostic > div {
-  padding-bottom: 6rem;
+  margin-bottom: 6rem;
 }
 
 .bordure-piedpage-diagnostic {
